--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
 <section class="intro">
 <h2>Learn product design from professionals</h2>
+
+<p>During the 3-day UX trainings, our designers and researchers come to your company to train your team and share our experience working with clients like HBO and Wizz air.
+
+The course is taught in our office or your location and fully customized for your company. Your team will work side-by-side with world-class
+UX designers.
+Our UX Training schedule is available below on the page for your convenience and fully displays daily course program. By bringing UX mindset
+into your organization, you can upskill your team for better and faster results.</p>
+
 </section>
 
 <section class="testimonial">
