--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@ into your organization, you can upskill your team for better and faster results.
 
 <section class="faq">
 <h3>Why should I participate in the UX training?</h3>
+<p>The three-day UX/UI training suits you if:</p>
+<p>
+You are a product manager, business analyst, project manager, UI/UX designer, software developer, start-up founder or a business owner. Your team struggles with innovation, design or product management. You would like your team to acquire new skills in just a few days. You want to learn how to gain qualitative insights from our users. 
+</p>
+
 <h3>What is the format of our course?</h3>
 </section>
 
