--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@ into your organization, you can upskill your team for better and faster results.
 <h3>Why should I participate in the UX training?</h3>
 <p>The three-day UX/UI training suits you if:</p>
 <p>
-You are a product manager, business analyst, project manager, UI/UX designer, software developer, start-up founder or a business owner. Your team struggles with innovation, design or product management. You would like your team to acquire new skills in just a few days. You want to learn how to gain qualitative insights from our users. 
+    <ul>
+
+    <li>You are a product manager, business analyst, project manager, UI/UX designer, software developer, start-up founder or a business owner. </li>
+    <li> Your team struggles with innovation, design or product management. </li>
+    <li>You would like your team to acquire new skills in just a few days. </li>
+    <li>You want to learn how to gain qualitative insights from our users. </li>
+    
+    </ul>  
 </p>
 
 <h3>What is the format of our course?</h3>
